Fix overview overflowing when show name is very long

--- a/src/subtitulamos/resources/assets/css/overview.scss
+++ b/src/subtitulamos/resources/assets/css/overview.scss
@@ -15,6 +15,7 @@
     background-color: var(--color-offwhite);
     border-radius: var(--standard-border-radius);
     position: relative;
+    word-break: break-word;
 
     .reload {
       position: absolute;
