--- a/src/subtitulamos/resources/assets/css/upload.scss
+++ b/src/subtitulamos/resources/assets/css/upload.scss
@@ -124,7 +124,7 @@
       font-size: 1.1rem;
       font-weight: 500;
       letter-spacing: -0.3px;
-      word-break: break-all;
+      word-break: break-word;
     }
   }
 }
